# idbi_hack

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml  render.yaml  requirements.txt
airflow/: Dockerfile
airflow/dags/: aayai_outreach.py  aayai_pipeline.py
benchmarks/: results.json
dashboard/: app.py
frontend/: .env.production.example  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppShell.tsx  BackButton.tsx  Badge.tsx  Card.tsx  ConfidenceBandFilter.tsx  CopyCommand.tsx  DataTable.tsx  DonutGauge.tsx  Feedback.tsx  PastBatches.tsx  ProgressBar.tsx  SectionHeader.tsx  Sidebar.tsx  StatCard.tsx  Topbar.tsx  UploadModal.tsx  ValidationFailuresCard.tsx
frontend/src/lib/: api.ts  apiTypes.ts  colors.ts  download.ts  format.ts  queryClient.ts  useApi.ts
frontend/src/mocks/: pipeline.ts  types.ts
model/: aayai_model.ubj  feature_meta.json
scripts/: benchmark.py  make_upload_sample.py
sql/: bronze_customers.sql  bronze_events.sql  bronze_transactions.sql  gold_behaviour.sql  gold_customer_profiles.sql  silver_transactions.sql
src/aayai/: __init__.py  datagen.py  paths.py  reset.py  util.py
tests/: test_agent_loop.py  test_api.py  test_bronze.py  test_council.py  test_engagement.py  test_gold.py  test_intent.py  test_interactions.py  test_loan_calc.py  test_loan_products.py  test_model.py  test_orchestration.py  test_outreach_rules.py  test_reset.py  test_serving.py  test_silver.py  test_validation.py  test_validation_catalog.py
(+85 files in other folders)
